[tool.poetry]
name = "ffmpeg-automation"
version = "0.1.0"
description = ""
authors = ["lifeadventurer <life0adventurer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
